@@ -1,3 +1,9 @@
+2001-11-02  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* doc/file.n:
+	* generic/tclIOUtil.c: updated documentation and comments
+	to clarify behaviour of 'file copy' wrt soft links.
+	
 2001-10-29  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* win/tclWinFile.c: fix to '-types {f r}' bug in
